# ArduinoCore-mbed-ce

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateArduinoIDEFlagTxtFiles.cmake  README.md  mbed_app.json5  platform.txt
.github/workflows/: build-cores.yml  publish-release-artifacts.yaml  publish-release-artifacts.yml
bootloaders/: CMakeLists.txt
cores/: CMakeLists.txt
cores/arduino/: Arduino.h  Serial.cpp  arm_hal_random.c  main.cpp  wiring.cpp
debugger/: CMakeLists.txt
extras/: CMakeLists.txt  package_index.in.json  package_index.json.NewTag.template
extras/variables-files/: nano33ble.variables
ide-config-files/: CMakeLists.txt
ide-config-files/board-txts/ARDUINO_GIGA/: boards.txt.in
ide-config-files/board-txts/ARDUINO_NANO33BLE/: boards.txt.in
ide-config-files/board-txts/ARDUINO_NICLA_SENSE_ME/: boards.txt.in
ide-config-files/board-txts/ARDUINO_PORTENTA_H7_M7/: boards.txt.in
ide-config-files/board-txts/RASPBERRY_PI_PICO/: boards.txt.in
ide-config-files/target-specific/ARDUINO_NICLA_SENSE_ME/: nicla-sense-me.variables
ide-config-files/universal/: platform.txt  platform.txt.in
libraries/: CMakeLists.txt
libraries/Arduino_CAN/: CMakeLists.txt  library.properties
libraries/Arduino_H7_Video/: CMakeLists.txt  library.properties
libraries/Basic/: Blink.ino  CMakeLists.txt  ReadAnalogVoltage.ino
libraries/Camera/: CMakeLists.txt  library.properties
libraries/Camera/docs/: README.md
libraries/Camera/src/: camera.cpp
libraries/Ethernet/: CMakeLists.txt
libraries/Ethernet/examples/AdvancedChatServer/: AdvancedChatServer.ino
libraries/Ethernet/examples/BarometricPressureWebServer/: BarometricPressureWebServer.ino
libraries/Ethernet/examples/DhcpAddressPrinter/: DhcpAddressPrinter.ino
libraries/Ethernet/examples/DhcpChatServer/: DhcpChatServer.ino
libraries/Ethernet/examples/UdpNtpClient/: UdpNtpClient.ino
libraries/Ethernet/examples/WebClientRepeating/: WebClientRepeating.ino
libraries/Ethernet/examples/WebClientRepeatingManual/: WebClientRepeatingManual.ino
libraries/Ethernet/examples/WebClientRepeatingSSL/: WebClientRepeatingSSL.ino
libraries/GPS/: CMakeLists.txt  library.properties
libraries/GSM/: CMakeLists.txt  library.properties
libraries/GSM/examples/GSMClient/: GSMClient.ino
libraries/GSM/examples/GSMSSLClient/: GSMSSLClient.ino
libraries/GSM/src/: CMUXClass.h  GSM.cpp  GSM.h  GSMClient.h  GSMTrace.cpp  PTYSerial.h
libraries/Himax_HM01B0/: CMakeLists.txt
libraries/Himax_HM0360/: CMakeLists.txt
libraries/KernelDebug/: CMakeLists.txt
libraries/KernelDebug/examples/KernelDebug/: KernelDebug.ino
libraries/KernelDebug/src/: KernelDebug.cpp  KernelDebug.h
libraries/MLC/: CMakeLists.txt  library.properties
libraries/MRI/: CMakeLists.txt
libraries/MRI/src/architectures/armv7-m/: armv7-m.h  armv7-m.x  debug_cm3.h
libraries/MRI/src/core/: buffer.h  context.h  core.h  gdb_console.h  libc.h  platforms.h  semihost.h
libraries/MRI/src/variants/: Nano_33_BLE.h  Portenta_H7.h
libraries/Nano33BLE_System/: CMakeLists.txt  library.properties
libraries/Nano33BLE_System/examples/Nano33_updateBLandSoftDevice/: Nano33_updateBLandSoftDevice.ino
libraries/Nicla_System/: CMakeLists.txt  library.properties
libraries/Nicla_System/examples/Blink_Nicla/: Blink_Nicla.ino
libraries/Nicla_System/src/: BQ25120A.cpp  RGBled.cpp  RGBled.h
libraries/PDM/: CMakeLists.txt
libraries/PDM/examples/PDMSerialPlotter/: PDMSerialPlotter.ino
libraries/PDM/src/STM32H747_SAI/: PDM.cpp  audio.c  audio.h
libraries/PDM/src/STM32H747_dfsdm/: PDM.cpp  audio.c  audio.h
libraries/PDM/src/nrf52/: PDM.cpp
libraries/PDM/src/rp2040/: PDM.cpp
libraries/Portenta_Audio/: CMakeLists.txt
libraries/Portenta_SDCARD/: CMakeLists.txt  library.properties
libraries/Portenta_SDCARD/examples/TestSDCARD/: TestSDCARD.ino
libraries/Portenta_SDCARD/src/: SDMMCBlockDevice.h
libraries/Portenta_SDRAM/: CMakeLists.txt  library.properties
libraries/RPC/: library.properties
libraries/SE05X/: library.properties
libraries/SFU/: CMakeLists.txt
libraries/SFU/src/: SFU.cpp  SFU.h
libraries/SPI/: CMakeLists.txt  SPI.cpp
libraries/STM32H747_System/: CMakeLists.txt  library.properties
libraries/STM32H747_System/examples/QSPIFReadPartitions/: QSPIFReadPartitions.ino
libraries/STM32H747_System/examples/QSPIFormat/: QSPIFormat.ino
libraries/STM32H747_System/examples/STM32H747_getBootloaderInfo/: STM32H747_getBootloaderInfo.ino
libraries/STM32H747_System/examples/STM32H747_getResetReason/: STM32H747_getResetReason.ino
libraries/STM32H747_System/examples/STM32H747_manageBootloader/: STM32H747_manageBootloader.ino
libraries/STM32H747_System/examples/WiFiFirmwareUpdater/: WiFiFirmwareUpdater.ino
libraries/STM32H747_System/src/: STM32H747_System.cpp  wiced_bd.h  wiced_filesystem.cpp  wiced_filesystem.h
libraries/Scheduler/: CMakeLists.txt
libraries/Scheduler/examples/MultipleBlinks/: MultipleBlinks.ino
libraries/SocketWrapper/: CMakeLists.txt  library.properties
libraries/SocketWrapper/src/: MbedClient.cpp  MbedClient.h  MbedSSLClient.cpp  MbedSSLClient.h  MbedUdp.cpp  SocketHelpers.cpp
libraries/ThreadDebug/: CMakeLists.txt
libraries/ThreadDebug/src/: ThreadDebug.cpp
libraries/USBAudio/: CMakeLists.txt
libraries/USBHID/: CMakeLists.txt  library.properties
libraries/USBHID/src/: USBKeyboard.h  USBMouse.h  USBMouseKeyboard.h
libraries/USBHOST/: library.properties
libraries/USBMIDI/: CMakeLists.txt  PluggableUSBMIDI.h  USBMIDI.cpp
libraries/USBMSD/: CMakeLists.txt  library.properties
libraries/USBMSD/examples/AccessFlashAsUSBDisk/: AccessFlashAsUSBDisk.ino
libraries/USBMSD/src/: USBMSD.cpp
libraries/WiFi/: CMakeLists.txt  library.properties
libraries/WiFi/examples/ScanNetworksAdvanced/: ScanNetworksAdvanced.ino
libraries/WiFi/examples/WiFiWebClient/: WiFiWebClient.ino  arduino_secrets.h
libraries/WiFi/src/: WiFi.cpp
libraries/Wire/: CMakeLists.txt  Wire.cpp  Wire.h
libraries/doom/: library.properties
libraries/ea_malloc/: CMakeLists.txt
svd/: CMakeLists.txt
variants/: CMakeLists.txt
(+21 files in other folders)
