if("ARDUINO_NANO33BLE" IN_LIST MBED_TARGET_LABELS)
	install(DIRECTORY nano33ble DESTINATION bootloaders/)
endif()

if("ARDUINO_NICLA_SENSE_ME" IN_LIST MBED_TARGET_LABELS)
	install(DIRECTORY NICLA_SENSE_ME DESTINATION bootloaders/)
endif()

if("ARDUINO_PORTENTA_H7" IN_LIST MBED_TARGET_LABELS)
	install(DIRECTORY PORTENTA_H7 DESTINATION bootloaders/)
endif()
