if("RP2040" IN_LIST MBED_TARGET_LABELS)
	install(FILES rp2040.svd DESTINATION svd)
elseif("MCU_NRF52840" IN_LIST MBED_TARGET_LABELS)
	install(FILES nrf52840.svd DESTINATION svd)
elseif("MCU_NRF52832" IN_LIST MBED_TARGET_LABELS)
	install(FILES nrf52833.svd DESTINATION svd)
elseif("MCU_STM32H747xI" IN_LIST MBED_TARGET_LABELS)
	install(FILES STM32H747_CM7.svd STM32H747_CM4.svd DESTINATION svd)
else()
	message(FATAL_ERROR "Don't know which SVD file to use for this target!")
endif()